--- a/build.xml
+++ b/build.xml
@@ -131,13 +131,6 @@
 					value="lib/gson-2.2.4.jar" />
 			</manifest>
 		</jar>
-		<jar jarfile="${java.dist}/catan-testing.jar" basedir="${java.build}">
-			<manifest>
-				<attribute name="Main-Class" value="testing.MainTest"/>
-				<attribute name="Class-Path"
-						   value="lib/gson-2.2.4.jar" />
-			</manifest>
-		</jar>
 	</target>
 	
 	<target name="our-client" depends="package" description="compiles, packages, and runs the student client">
@@ -158,13 +151,19 @@
 		</java>
 	</target>
 
-	<target name="test" depends="package" description="compiles, packages, and runs the student server">
-		<java jar="${java.dist}/catan-testing.jar" dir="${java.dist}" fork="yes">
-			<sysproperty key="com.sun.management.jmxremote" value=""/>
-			<assertions>
-				<enable/>
-			</assertions>
-		</java>
+	<path id="junit.classpath">
+		<fileset dir="${java.lib.dir}"/>
+		<fileset dir="${java.dist}"/>
+	</path>
+
+	<target name="test" depends="package" description="only runs junit tests">
+		<junit printsummary="withOutAndErr">
+			<classpath refid="junit.classpath"/>
+			<formatter type="plain" usefile="false"/>
+			<test name="testing.TestTest"/>
+			<test name="client.model.TestModelClass"/>
+			<!-- TODO put the name of your test classes here, then run ant test -->
+		</junit>
 	</target>
     
     <target name="make-tester-zip" depends="package" description="makes a zip file for your testing team">
