added ServerPollerTest class to build.xml

--- a/build.xml
+++ b/build.xml
@@ -162,6 +162,7 @@
 			<formatter type="plain" usefile="false"/>
 			<test name="testing.TestTest"/>
 			<test name="client.model.TestModelClass"/>
+			<test name="testing.ServerPollerTest"/>
 			<!-- TODO put the name of your test classes here, then run ant test -->
 		</junit>
 	</target>
