fix for merge conflicts

--- a/build.xml
+++ b/build.xml
@@ -165,6 +165,7 @@
 			<test name="testing.ServerPollerTest"/>
 			<test name="testing.GameAdministratorTest"/>
 			<!-- TODO put the name of your test classes here, then run ant test -->
+			<test name="testing.ModelTest"/>
 		</junit>
 	</target>
     
