--- a/build.xml
+++ b/build.xml
@@ -161,7 +161,7 @@
 			<classpath refid="junit.classpath"/>
 			<formatter type="plain" usefile="false"/>
 			<test name="testing.TestTest"/>
-			<test name="testing.ServerPollerTest.java"/>
+			<test name="testing.ServerPollerTest"/>
 			<test name="testing.ModelTest"/>
 			<!-- TODO put the name of your test classes here, then run ant test -->
 		</junit>
