ant our-client now takes 2 parameters -Dhost and -Dport, which can be used to specify host and port for the server. The other files changed are to set these parameters using the main function's args.

--- a/build.xml
+++ b/build.xml
@@ -134,7 +134,11 @@
 	</target>
 	
 	<target name="our-client" depends="package" description="compiles, packages, and runs the student client">
+		<property name="host" value="localhost"/>
+		<property name="port" value="8081"/>
 		<java jar="${java.dist}/catan-client.jar" dir="${java.dist}" fork="yes">
+			<arg value="${host}"/>
+			<arg value="${port}"/>
 			<sysproperty key="com.sun.management.jmxremote" value=""/>
 			<assertions>
 				<enable/>
