--- a/build.xml
+++ b/build.xml
@@ -174,11 +174,8 @@
 	<target name="test" depends="package" description="only runs junit tests">
 		<junit printsummary="withOutAndErr">
 			<classpath refid="junit.classpath"/>
-			<formatter type="plain" usefile="false"/>>
-			<test name="testing.ServerPollerTest"/>
+			<formatter type="plain" usefile="false"/>
 			<test name="testing.ModelTest"/>
-			<test name="testing.GameAdministratorTest"/>
-			<test name="testing.ServerProxyTest"/>
 			<test name="testing.ServerModelTest"/>
 			<test name="testing.CommandTest"/>
 			<!-- TODO put the name of your test classes here, then run ant test -->
