add parameters for ant our-server

--- a/build.xml
+++ b/build.xml
@@ -148,6 +148,9 @@
  	
 	<target name="our-server" depends="package" description="compiles, packages, and runs the student server">
 		<java jar="${java.dist}/catan-server.jar" dir="${java.dist}" fork="yes">
+			<arg value="${database}"/>
+			<arg value="${command}"/>
+			<arg value="${wipe}"/>
 			<sysproperty key="com.sun.management.jmxremote" value=""/>
 						
 			<classpath>
