--- a/build.xml
+++ b/build.xml
@@ -176,6 +176,7 @@
 			<classpath refid="junit.classpath"/>
 			<formatter type="plain" usefile="false"/>
 			<test name="testing.SerializedPersistenceTest"/>
+			<test name="testing.RelationalPersistenceTest"/>
 			<!-- TODO put the name of your test classes here, then run ant test -->
 		</junit>
 	</target>
